--- a/frontend/package.json
+++ b/frontend/package.json
@@ -21,6 +21,7 @@
     "react-bootstrap": "^2.8.0",
     "react-datepicker": "^4.16.0",
     "react-dom": "^18.2.0",
+    "react-hook-form": "^7.45.4",
     "react-native-svg": "^13.13.0",
     "react-responsive-carousel": "^3.2.23",
     "react-router-dom": "^6.15.0",
